--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="Header"> 
         <div class="Navigation-Bar">
             <div class="Navigation-Bar-Left">
-             <img src="Images/Logo.png" height= 75px width= auto alt="VHS-2-Digital-Logo">
+             <img src="./Logo.png" height= 75px width= auto alt="VHS-2-Digital-Logo">
             </div>
             <div class="Navigation-Bar-Right">
              <p>Header Link One</p>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="Header-Middle-Right">
-             <img src="Images/transparent.png" height=200px width=auto alt="this is a placeholder image">
+             <img src="./transparent.png" height=200px width=auto alt="this is a placeholder image">
             </div>
       
         </div>
@@ -46,19 +46,19 @@
         </div>
         <div class="Main-content-images">
             <div class="ImageText">
-                <img src="Images/placeholders/pexels-zexy-zwcom-3384584.jpg" height= auto width= 268px class="middle-images" alt="couple">
+                <img src="./placeholders/pexels-zexy-zwcom-3384584.jpg" height= auto width= 268px class="middle-images" alt="couple">
                 <p class="middle-text">Relive memories shared with loved ones.</p>
             </div>
             <div class="ImageText">
-                <img src="Images/placeholders/pexels-irockeruk-8874851.jpg" height= auto width= 268px class="middle-images"  alt="vacation">
+                <img src="./placeholders/pexels-irockeruk-8874851.jpg" height= auto width= 268px class="middle-images"  alt="vacation">
                 <p class="middle-text">Make any occasion unforgettable.</p>
             </div>
             <div class="ImageText">
-                <img src="Images/placeholders/pexels-jin-wedding-5729030.jpg" height= auto width= 268px class="middle-images" alt="wedding">
+                <img src="./placeholders/pexels-jin-wedding-5729030.jpg" height= auto width= 268px class="middle-images" alt="wedding">
                 <p class="middle-text">To a lifetime of adventures together.</p>
             </div>
             <div class="ImageText">
-                <img src="Images/placeholders/pexels-denise-duplinski-6040989.jpg" height= auto width= 268px class="middle-images" alt="baby">
+                <img src="./placeholders/pexels-denise-duplinski-6040989.jpg" height= auto width= 268px class="middle-images" alt="baby">
                 <p class="middle-text">Life is an event. Make it memorable.</p>
             </div>
         </div>
